Eliminar barras legisladores, add vistas planillas

--- a/MilitappWeb.Web/Views/ResultadoElectoral/Index.cshtml
+++ b/MilitappWeb.Web/Views/ResultadoElectoral/Index.cshtml
@@ -40,12 +40,13 @@
                 <canvas id="IngresoDiputados"></canvas>
                 <br />
                 <br />
-
+                
                 <!--Grafico de barras-->
-                <canvas id="IngresoLegisladores"></canvas>
+                <canvas id="MesasPorComuna"></canvas>
                 <br />
                 <br />
 
+                
             </div>
             <div class="col-md-3"></div>
         </div>
@@ -81,16 +82,17 @@
                 </tbody>
             </table>
         </div>
+        
 
         <!--Tabla-->
         <div class="input-group">
 
             <span class="input-group-addon">Buscar</span>
 
-            <input id="filter2" type="text" class="form-control" placeholder="Escribir acá...">
+            <input id="filter" type="text" class="form-control" placeholder="Escribir acá...">
         </div>
         <div style="overflow: auto">
-            <table id="tablaLegisladores" class="table table-hover">                
+            <table id="tablaDiputados" class="table table-hover">
                 <thead>
                     <tr>
                         <th>@Html.DisplayNameFor(m => m.Funcionarios.lca_id)</th>
@@ -99,7 +101,7 @@
                         <th>@Html.DisplayNameFor(m => m.Funcionarios.lcc_votos_correspondientes)</th>
                     </tr>
                 </thead>
-                <tbody class="searchable">
+                <tbody class="searchable">                    
                     @foreach (var obj in Model.Legisladores)
                     {
                         <tr>
@@ -111,8 +113,8 @@
                     }
                 </tbody>
             </table>
-
         </div>
+
 
         <!--Tabla-->
         <div class="input-group">
@@ -125,19 +127,73 @@
             <table id="tablaVotosPorMesa" class="table table-hover">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>@Html.DisplayNameFor(m => m.votosPorMesa.mes_id)</th>
-                        <th>@Html.DisplayNameFor(m => m.votosPorMesa.lca_id)</th>
-                        <th>@Html.DisplayNameFor(m => m.votosPorMesa.pca_cantidad_votos)</th>                        
+                        <th>Dip - Vamos Juntos</th>
+                        <th>Dip - Unidad Porteña</th>
+                        <th>Dip - Evolucion Ciudadana</th>
+                        <th>Dip - 1Pais</th>
+                        <th>Leg - Vamos Juntos</th>
+                        <th>Leg - Unidad Porteña</th>
+                        <th>Leg - Evolucion Ciudadana</th>
+                        <th>Leg - 1Pais</th>
                     </tr>
                 </thead>
                 <tbody class="searchable">
                     @foreach (var obj in Model.ListaVotosPorMesa)
                     {
                         <tr>
+                            <td>@Html.DisplayFor(m => obj.id)</td>
                             <td>@Html.DisplayFor(m => obj.mes_id)</td>
-                            <td>@Html.DisplayFor(m => obj.nombreLista)</td>
-                            <td>@Html.DisplayFor(m => obj.pca_cantidad_votos)</td>                            
+                            <td>@Html.DisplayFor(m => obj.lca1)</td>
+                            <td>@Html.DisplayFor(m => obj.lca2)</td>
+                            <td>@Html.DisplayFor(m => obj.lca3)</td>
+                            <td>@Html.DisplayFor(m => obj.lca4)</td>
+                            <td>@Html.DisplayFor(m => obj.lca5)</td>
+                            <td>@Html.DisplayFor(m => obj.lca6)</td>
+                            <td>@Html.DisplayFor(m => obj.lca7)</td>
+                            <td>@Html.DisplayFor(m => obj.lca8)</td>                            
                         </tr>
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
+
+
+        <!--Tabla-->
+        <div class="input-group">
+
+            <span class="input-group-addon">Buscar</span>
+
+            <input id="filter4" type="text" class="form-control" placeholder="Escribir acá...">
+        </div>
+        <div style="overflow: auto">
+            <table id="tablaHorariosMesa" class="table table-hover">
+                <thead>
+                    <tr>                        
+                        <th>Mesa</th>
+                        <th>Fecha apertura</th>
+                        <th>Fecha cierre</th>
+                    </tr>
+                </thead>
+                <tbody class="searchable">
+                    @foreach (var obj in Model.ResultadoElectoral.ListaPlanillas)
+                    {
+                        if (obj.pla_apertura != default(DateTime)) { 
+                            <tr>
+                                <td>@Html.DisplayFor(m => obj.mes_id)</td>                                
+                                <td>@Html.DisplayFor(m => obj.pla_apertura)</td>
+                                @if (obj.pla_cierre != default(DateTime)) { 
+                                    <td>@Html.DisplayFor(m => obj.pla_cierre)</td>                            
+                                }
+                                else
+                                {
+                                    <td></td>
+                                }
+                            </tr>
+                        }
                     }
                 </tbody>
             </table>
@@ -182,6 +238,12 @@
 
     <script type="text/javascript">
 
+        function GetDatosComunaPorMesa(obj) {
+            var strMethodUrl = '@Url.Action("GetDatosComunaPorMesa", "ResultadoElectoral")'
+            $.getJSON(strMethodUrl, function (json) {
+                graficoBarrasMesasPorComunas(json);
+            });
+        }
 
 
         function callDatosResultadoElectoral(obj) {            
@@ -209,13 +271,13 @@
         function CargaControles() {
             var obj;
             callDatosResultadoElectoral(obj);
-            callDatosIngresoDiputados(obj);
-            CallDatosIngresoLesgiladores(obj);                             
+            callDatosIngresoDiputados(obj);            
+            GetDatosComunaPorMesa(obj);
         }
 
         function graficoBarras(obj) {
             var ctxB = document.getElementById("ResultadoElectoral").getContext('2d');
-            var myBarChart = new Chart(ctxB, {
+            var myBarChart1 = new Chart(ctxB, {
                 type: 'bar',
                 data: {
                     labels: ["DIP_VM", "LEG_VM", "DIP_UP", "LEG_UP", "DIP_Ev", "LEG_Ev", "DIP_1P", "LEG_1P"],
@@ -223,62 +285,24 @@
                         label: '% de Votos',
                         data: obj,                        
                         backgroundColor: [
+                            'rgba(255, 255, 0, 0.2)',
+                            'rgba(255, 255, 55, 0.2)',                            
                             'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(61, 241, 245, 0.2)',
+                            'rgba(0, 204, 0, 0.2)',
+                            'rgba(125, 251, 55, 0.2)',                            
+                            'rgba(51, 51, 51, 0.2)',
+                            'rgba(178, 178, 178, 0.2)',
                         ],
                         borderColor: [
+                            'rgba(255, 255, 0, 1)',
+                            'rgba(255, 255, 55, 1)',
                             'rgba(54, 162, 235, 1)',
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 99, 132, 1)',
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                scaleStartValue : 0,
-                optionss: {
-                    scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero: true
-                            }
-                        }]
-                    }
-                }
-            });
-        }
-        
-
-        function graficoIngresoLesgiladores(obj) {
-            var ctxB = document.getElementById("IngresoLegisladores").getContext('2d');
-            var myBarChart1 = new Chart(ctxB, {
-                type: 'bar',
-                data: {
-                    labels: ["LEG_VM", "LEG_UP", "LEG_Ev", "LEG_1P"],
-                    datasets: [{
-                        label: 'Ingreso de LEGISLADORES',
-                        data: obj,                                                
-                        backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(255, 99, 132, 0.2)',
-                        ],
-                        borderColor: [
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(255, 99, 132, 1)',
+                            'rgba(61, 241, 245, 1)',
+                            'rgba(0, 204, 0, 1)',
+                            'rgba(125, 251, 55, 1)',
+                            'rgba(51, 51, 51, 1)',
+                            'rgba(178, 178, 178, 1)',
                         ],
                         borderWidth: 1
                     }]
@@ -296,10 +320,73 @@
             });
         }
         
+
+        
+
+        function graficoBarrasMesasPorComunas(obj) {
+            var ctxB = document.getElementById("MesasPorComuna").getContext('2d');
+            var myBarChart2 = new Chart(ctxB, {
+                type: 'bar',
+                data: {
+                    labels: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15"],
+                    datasets: [{
+                        label: 'Cantidad de mesas por comuna',
+                        data: obj,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(255, 99, 132, 0.2)',
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(255, 99, 132, 1)',
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                scaleStartValue: 0,
+                options: {
+                    scales: {
+                        yAxes: [{
+                            ticks: {
+                                beginAtZero: true
+                            }
+                        }]
+                    }
+                }
+            });
+        }
+
+        
         
         function graficoIngresoDiputados(obj) {
             var ctxBB = document.getElementById("IngresoDiputados").getContext('2d');
-            var myBarChart = new Chart(ctxBB, {
+            var myBarChart3 = new Chart(ctxBB, {
                 type: 'bar',
                 data: {
                     labels: ["DIP_VM", "DIP_UP", "DIP_Ev", "DIP_1P"],
@@ -307,16 +394,16 @@
                         label: 'Ingreso de DIPUTADOS',
                         data: obj,                                                
                         backgroundColor: [
+                            'rgba(255, 255, 0, 0.2)',
                             'rgba(54, 162, 235, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(0, 204, 0, 0.2)',
+                            'rgba(51, 51, 51, 0.2)',
                         ],
                         borderColor: [
+                            'rgba(255, 255, 0, 1)',
                             'rgba(54, 162, 235, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(54, 162, 235, 1)',
+                            'rgba(0, 204, 0, 1)',
+                            'rgba(51, 51, 51, 1)',
                         ],
                         borderWidth: 1
                     }]
@@ -352,6 +439,16 @@
                 })
 
                 $('#filter2').keyup(function () {
+
+                    var rex = new RegExp($(this).val(), 'i');
+                    $('.searchable tr').hide();
+                    $('.searchable tr').filter(function () {
+                        return rex.test($(this).text());
+                    }).show();
+
+                })
+
+                $('#filter4').keyup(function () {
 
                     var rex = new RegExp($(this).val(), 'i');
                     $('.searchable tr').hide();
